# TabRiskScore

./: .pre-commit-config.yaml  Makefile  README.md  Untitled.ipynb  config.yaml  data.csv  mkdocs.yml  myreport.html  output.csv  pyproject.toml  report.html
.github/workflows/: ci.yml
data/: Xcontrol.csv  Xsyn.csv  Xtrain.csv
data/sdmetrics/: metadata.json
docs/: index.md  measures.md  normalizers.md  usage.md
output/files/: mia_results.pickle
querysnout/: main.py  whatismysolution.py
querysnout/src/: dataset_loader.py  dataset_sampler.py  experiments.py  qbs_environment.py  query_search.py
querysnout/src/optimized_qbs/: setup.py
querysnout/src/optimized_qbs/optimqbs/: qbs.py
querysnout/src/optimized_qbs/optimqbs.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
querysnout/src/optimqbs.egg-info/: PKG-INFO  SOURCES.txt
src/tabriskscore/adapters/: __init__.py
src/tabriskscore/cli/: cli.py
src/tabriskscore/orchestrator/: __init__.py  flow.py
src/tabriskscore/plugins/: __init__.py  example.py  hooks.py  row_count.py  similar_check.py
src/tabriskscore/plugins/lnb/: classifiers.py  data_prep.py  distance.py  feature_extractors.py  generators.py  lnb_plugin.py  mia.py  plots.py  shadow_data.py  utils.py
src/tabriskscore/plugins/sdmetrics/: categorical_cap.py  dcr_baseline.py  dcr_overfitting.py  disclosure_estimate.py  disclosure_protection.py
src/tabriskscore/reports/: __init__.py  render.py
src/tabriskscore/reports/templates/: report.html.jinja
